--- a/imap.cabal
+++ b/imap.cabal
@@ -106,24 +106,24 @@ library
     Network.IMAP.Utils
   -- other-modules:
   -- other-extensions:
-  build-depends:        base >= 4.10 && <4.12,
-                        attoparsec == 0.13.*,
-                        text == 1.2.*,
-                        connection == 0.2.*,
-                        bytestring == 0.10.*,
-                        random == 1.1.*,
+  build-depends:        base,
+                        attoparsec,
+                        text,
+                        connection,
+                        bytestring,
+                        random,
                         word8 == 0.1.* && <0.2,
                         rolling-queue == 0.1,
                         stm >= 2.4 && <2.6,
                         either >= 4.5 && <6,
-                        hslogger == 1.2.*,
+                        hslogger,
                         transformers == 0.5.*,
                         list-t == 1.0.*,
                         stm-delay == 0.1.*,
                         exceptions >= 0.8 && <0.11,
                         pipes == 4.3.*,
-                        containers == 0.5.*,
-                        network == 2.6.*
+                        containers,
+                        network
   hs-source-dirs:       src
   default-language:     Haskell2010
   default-extensions:   OverloadedStrings,
@@ -141,25 +141,25 @@ Test-Suite imap-test
   type:                 exitcode-stdio-1.0
   main-is:              main.hs
   hs-source-dirs:       test, src
-  build-depends:        base >= 4.10 && <4.12,
-                        attoparsec == 0.13.*,
-                        text == 1.2.*,
-                        connection == 0.2.*,
-                        bytestring == 0.10.*,
-                        random == 1.1.*,
+  build-depends:        base, 
+                        attoparsec, 
+                        text,
+                        connection,
+                        bytestring, 
+                        random,
                         word8 == 0.1.* && <0.2,
-                        rolling-queue == 0.1,
+                        rolling-queue,
                         stm >= 2.4 && <2.6,
                         either >= 4.5 && <6,
-                        hslogger == 1.2.*,
+                        hslogger,
                         transformers == 0.5.*,
                         list-t == 1.0.*,
                         derive == 2.6.*,
                         stm-delay == 0.1.*,
                         exceptions >= 0.8 && <0.11,
                         pipes == 4.3.*,
-                        containers == 0.5.*,
-                        network == 2.6.*,
+                        containers,
+                        network,
 
                         tasty >= 0.11,
                         HUnit == 1.6.*,
