--- a/imap.cabal
+++ b/imap.cabal
@@ -117,7 +117,7 @@ library
                         stm >= 2.4 && <2.6,
                         either >= 4.5 && <6,
                         hslogger,
-                        transformers == 0.5.*,
+                        transformers >= 0.5 && < 0.7,
                         list-t == 1.0.*,
                         stm-delay == 0.1.*,
                         exceptions >= 0.8 && <0.11,
